k8s/external-dns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      # Only use if you're also using RBAC
      # serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: k8s.gcr.io/external-dns/external-dns:v0.10.2
          args:
            - --source=ingress # or ingress or both
            - --provider=pdns
            - --pdns-server=http://powerdns.default.svc.cluster.local:8081
            - --pdns-api-key=powerdns
            - --txt-owner-id=cluster
            - --domain-filter=tribe.here # will make ExternalDNS see only the zones matching provided domain; omit to process all available zones in PowerDNS
            - --log-level=debug
            - --interval=30s
