k8s/kratos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
  namespace: default
  labels:
    app: kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kratos
  template:
    metadata:
      labels:
        app: kratos
    spec:
      containers:
        - name: kratos
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          image: docker.io/gqadonis/kratos:latest
          command:
            - kratos
            - serve
            - -c
            - /etc/config/kratos.yml
          ports:
            - containerPort: 4433
              name: api
            - containerPort: 4434
              name: admin
          volumeMounts:
            - name: config
              mountPath: /etc/config
      volumes:
        - name: config
          configMap:
            name: kratos-config
