k8s/powerdns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns
  namespace: default
  labels:
    app: powerdns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerdns
  template:
    metadata:
      labels:
        app: powerdns
    spec:
      containers:
        - name: powerdns
          image: tribehealth/power_auth:latest
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns
            - containerPort: 53
              protocol: UDP
              name: dnsudp
            - containerPort: 8081
              protocol: TCP
              name: web
