k8s/kratos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 4433
      name: api
    - port: 4434
      name: admin
  selector:
    app: kratos
