k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      name: db
  selector:
    app: postgres
